--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-.mvn/timing.properties
+.mvn/*.properties
 
 #JAVA WEB
 classes/
