--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/*.properties
+.mvn/**.properties
 
 #JAVA WEB
 classes/
