--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/*.properties
-.mvn/**.properties
+.mvn/*/*.properties
 
 #JAVA WEB
 classes/
